--- a/index.html
+++ b/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
+
 <body>
     <h1>Daianne A Dorigatti</h1>
     <hr>
-    <p id="resumo-daianne">Me chamo Daianne, tenho 31 anos, sou <strong>brasileira</strong> e natural de uma cidade chamada<br>
-        Rio dos Cedros, interior de Santa Catarina. Atualmente moro em <strong>Blumenau/SC</strong><br>
-        e sou estudante de Desenvolvimento Web na Trybe. Sou casada com Luan e temos a Pandora<br>
-        que é nossa cachorrinha. 
-    </p><br>
+
+    <div class="paragrafo">
+        <p id="resumo-daianne">Me chamo Daianne, tenho 31 anos, <strong>brasileira</strong> e natural de uma cidade
+            chamada<br>
+            Rio dos Cedros, interior de Santa Catarina. Atualmente moro em <strong>Blumenau/SC</strong><br>
+            e sou estudante de Desenvolvimento Web na Trybe. Sou casada com Luan e temos a Pandora<br>
+            que é nossa cachorrinha.
+        </p><br>
 
 
-    <img src="Imagens/daianne.png" alt="Casamento de uma querida amiga" width="200px">
-    <br>
+        <img id="image-daianne" src="Imagens/daianne.png" alt="Foto de Daianne">
+        <br>
+
+        <hr>
+
+        <h2><span class="description-habilities-daianne">Algumas habilidades:</span></h2>
+
+        <ul class="list-style-daianne habilidades">
+            <li><strong>Empatia</li></strong>
+            <li>Fexibilidade</li>
+            <li>Aprendizado contínuo</li>
+        </ul>
 
 
-    <h2>Algumas habilidades:</h2>
+        <p><img id="image-cachorro" src="Imagens/cachorro.jpg" alt="Foto de cachorro"><br>
+            Durante a pandemia, adotamos a Pandora, nossa filha de 4 patas. Ela tinha aproximadamente 2 anos quando
+            adotamos e chegou com alguns problemas de saúde, como irritação na pele, otite, pouco peso, e falta de pelo em
+            algumas regiões do corpo. Mas agora, após dois anos conosco, ela está super contente, ganhou peso,
+            os pelos cresceram lindos e saudáveis, brinca um monte e é um amorzinho.
+        </p>
     
-    <ul class="list-style">
-        <li><strong>Empatia</li></strong>
-        <li>Fexibilidade</li>
-        <li>Aprendizado contínuo</li>
-    </ul>
 
- 
+        <img id="image-pandora" src="Imagens/Pandora.jpeg" alt="Foto da Pandora">
+        <img id="image-coracao" src="Imagens/coracao.png" alt="Foto coracao">
+
+        <br> <br> <br> <br> <br> <br><br><br><br><br><br><br><br><br><br>
+        <h2><span class="description-habilities-pandora">Algumas habilidades:</span></h2>
+        <ul class ="list-style-pandora habilidades">
+            <li><strong>Alegre</li></strong>
+            <li>Companheira</li>
+            <li>Protetora</li>
+        </ul>
+
+
+    </div>
+
+
 </body>
-    
+
 </html>
